log
Thu Mar 25 01:54:46 UTC 2021: 
 list.c | 6 +++++-
 1 file changed, 5 insertions(+), 1 deletion(-)
In file included from test.c:5:0:
list.c: In function ‘createList’:
list.c:32:6: error: unknown type name ‘list’; did you mean ‘List’?
      list* ll = (list*)malloc(sizeof(list));
      ^~~~
      List
list.c:32:18: error: ‘list’ undeclared (first use in this function); did you mean ‘List’?
      list* ll = (list*)malloc(sizeof(list));
                  ^~~~
                  List
list.c:32:18: note: each undeclared identifier is reported only once for each function it appears in
list.c:32:23: error: expected expression before ‘)’ token
      list* ll = (list*)malloc(sizeof(list));
                       ^
list.c:33:8: error: request for member ‘tamano’ in something not a structure or union
      ll->tamano=0;
        ^~
list.c:34:8: error: request for member ‘primerItem’ in something not a structure or union
      ll->primerItem = NULL;
        ^~
list.c:35:8: error: request for member ‘ultimoItem’ in something not a structure or union
      ll->ultimoItem = NULL;
        ^~
list.c:36:13: error: return from incompatible pointer type [-Werror=incompatible-pointer-types]
      return ll;
             ^~
cc1: all warnings being treated as errors
Compilation failed
Thu Mar 25 01:55:04 UTC 2021: 
 list.c | 6 +++++-
 1 file changed, 5 insertions(+), 1 deletion(-)
In file included from test.c:5:0:
list.c: In function ‘createList’:
list.c:33:8: error: ‘List {aka struct List}’ has no member named ‘tamano’
      ll->tamano=0;
        ^~
list.c:34:8: error: ‘List {aka struct List}’ has no member named ‘primerItem’
      ll->primerItem = NULL;
        ^~
list.c:35:8: error: ‘List {aka struct List}’ has no member named ‘ultimoItem’
      ll->ultimoItem = NULL;
        ^~
Compilation failed
Thu Mar 25 01:57:10 UTC 2021: 
 list.c | 6 +++++-
 1 file changed, 5 insertions(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
ee558f8
